# raindrop-tagging

./: .cursorrules  .example.env  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
docs/: project-requirement-document.md
docs/examples/frontend/: example.py
raindrop-information-extaction/: .dockerignore  README.md  build_and_run_docker.bash  requirements.txt
raindrop-information-extaction/raindrop_information_extaction/: __init__.py  main.py
raindrop_information_extaction/: api.py  api_utils.py  cli.py  frontend.py  main.py  models.py  processors.py  youtube_processing.py
